--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "vercel dev",
+    "deploy": "vercel deploy --prod",
     "postinstall": "tsc",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "keywords": [],
   "author": "Jean Borges",
@@ -23,8 +23,9 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^4.6.0",
-    "typescript": "^4.9.4",
-    "uuid": "^9.0.0"
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
+    "vercel": "^28.14.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
