--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "vercel dev",
-    "deploy": "vercel deploy --prod",
+    "build": "tsc",
+    "start": "node ./dist/server.js",
     "postinstall": "tsc",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
