--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/server.js",
-    "postinstall": "tsc",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "keywords": [],
@@ -24,8 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^4.6.0",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0",
-    "vercel": "^28.14.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
